--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -26,10 +26,13 @@ jobs:
           packageName="$( node -e "console.log(require('./package.json').name)" )"
           currentVersion="$( node -e "console.log(require('./package.json').version)" )"
           isPublished="$( npm view $packageName versions --json | jq -c --arg cv "$currentVersion" 'any(. == $cv)' )"
+          isPrerelease="$( node -e "console.log(require('semver').prerelease('$currentVersion') ? 'true' : 'false')" )"
           echo "published=$isPublished" >> "$GITHUB_OUTPUT"
           echo "current-version=$currentVersion" >> "$GITHUB_OUTPUT"
+          echo "is-prerelease=$isPrerelease" >> "$GITHUB_OUTPUT"
           echo "currentVersion: $currentVersion"
           echo "isPublished: $isPublished"
+          echo "isPrerelease: $isPrerelease"
           echo "packageName: $packageName"
 
       - name: Create release
@@ -43,8 +46,11 @@ jobs:
           name: node-v${{ steps.check.outputs.current-version }}
           allowUpdates: true
           draft: true
+          prerelease: ${{ steps.check.outputs.is-prerelease == 'true' }}
     outputs:
       published: ${{ steps.check.outputs.published }}
+      current-version: ${{ steps.check.outputs.current-version }}
+      is-prerelease: ${{ steps.check.outputs.is-prerelease }}
 
   publish_binaries:
     needs: release-check
@@ -232,7 +238,7 @@ jobs:
 
       - name: Prebuild and upload
         working-directory: platform/node
-        run: npm run prebuild -- --upload-all --tag node-v${{ steps.package-version.outputs.current-version }}
+        run: npm run prebuild -- --upload-all --tag node-v${{ needs.release-check.outputs.current-version }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -246,18 +252,12 @@ jobs:
         shell: bash
 
     steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v4
+      - uses: actions/checkout@v4
 
       - name: Use Node.js from nvmrc
-        uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444 # v4
+        uses: actions/setup-node@v4
         with:
           node-version-file: 'platform/node/.nvmrc'
-
-      - name: Get version
-        id: package-version
-        uses: martinbeentjes/npm-get-version-action@3cf273023a0dda27efcd3164bdfb51908dd46a5b # v1.3.1
-        with:
-          path: platform/node
 
       - name: npm ci
         working-directory: platform/node
@@ -267,7 +267,7 @@ jobs:
         id: prepare_release
         working-directory: platform/node
         run: |
-          RELEASE_TYPE="$(node -e "console.log(require('semver').prerelease('${{ steps.package-version.outputs.current-version }}') ? 'prerelease' : 'regular')")"
+          RELEASE_TYPE="$(node -e "console.log(require('semver').prerelease('${{ needs.release-check.outputs.current-version }}') ? 'prerelease' : 'regular')")"
           if [[ $RELEASE_TYPE == 'regular' ]]; then
             echo "prerelease=false" >> "$GITHUB_OUTPUT"
           else
@@ -277,17 +277,17 @@ jobs:
       - name: Extract changelog for version
         working-directory: platform/node
         run: |
-          awk '/^##/ { p = 0 }; p == 1 { print }; $0 == "## ${{ steps.package-version.outputs.current-version }}" { p = 1 };' CHANGELOG.md > changelog_for_version.md
+          awk '/^##/ { p = 0 }; p == 1 { print }; $0 == "## ${{ needs.release-check.outputs.current-version }}" { p = 1 };' CHANGELOG.md > changelog_for_version.md
           cat changelog_for_version.md
 
       - name: Update Release Notes
         id: update_release_notes
-        uses: ncipollo/release-action@b7eabc95ff50cbeeedec83973935c8f306dfcd0b # v1.20.0
+        uses: ncipollo/release-action@v1.20.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag: node-v${{ steps.package-version.outputs.current-version }}
-          name: node-v${{ steps.package-version.outputs.current-version }}
+          tag: node-v${{ needs.release-check.outputs.current-version }}
+          name: node-v${{ needs.release-check.outputs.current-version }}
           bodyFile: platform/node/changelog_for_version.md
           allowUpdates: true
           draft: false
